external-projects/sui-prover/crates/sui-prover/tests/snapshots/prettyprint-enum.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
warning: unused alias
  ┌─ tests/inputs/prettyprint-enum.move:3:31
  │
3 │ use prover::prover::{ensures, requires};
  │                               ^^^^^^^^ Unused 'use' of alias 'requires'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: prover::ensures does not hold
   ┌─ tests/inputs/prettyprint-enum.move:23:5
   │
23 │     ensures(res == MyEnum::A(x));
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/prettyprint-enum.move:20: foo_spec
   =         res#1#0 = foo::MyEnum::B{pos0 = ELIDEDu64}
   =     at tests/inputs/prettyprint-enum.move:23: foo_spec
